<resources>
    <string name="app_name">Botanico</string>
    <string name="nav_home">Home</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_notification_settings">Notification settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_info">Info</string>
    <string name="add_screen_title">New garden</string>
    <string name="nav_plant_details">Plant details</string>
    <string name="app_info">Botanico is a mobile application which helps you manage your self-watering smart garden.</string>

    <string name="wifi_steps">1. After setting up your new device, open your Wifi settings \n
        2. Connect your phone to BotanicoAP\n
        3. Click on notification\n
        4. From the menu select "Configure WiFi" \n
        5. Select the network you want Arduino to use \n
        6. Input the network password\n "
    </string>
    <string name="wifi_setup">Connect Arduino to your WiFi network</string>
    <string name="WiFi_setup_help">Configure WiFi for new plant</string>

    <string name="new_plant_name">Name</string>
    <string name="new_plant_humidity">Min humidity</string>
    <string name="new_plant_id">ID</string>
    <string name="upload_image"><u>Upload cover image for your plant</u></string>
    <string name="save_plant">Save</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="dialog_title_error">Error</string>
    <string name="dialog_msg_invalid">Invalid device ID</string>
    <string name="dialog_msg_not_filled">Device ID and plant name are required!</string>

    <string name="subscribe">Subscription succeeded!</string>
    <string name="unsubscribe">Subscription cancelled!</string>

    <string name="help_get_started">How to get started</string>
    <string name="help_get_started_1">1. Add a new plant</string>
    <string name="help_get_started_1_text">From the home screen press the floating + button. Enter the Device ID of your watering unit, garden name and choose an image for your new plant.</string>
    <string name="help_get_started_2">2. Configure WiFi for new plant</string>
    <string name="help_get_started_2_text">Press the (?) button for instructions on how to setup WiFi.</string>
    <string name="help_get_started_3">3. You\'re all set!</string>
    <string name="help_data">How to view data</string>
    <string name="help_data_1">1. Select a plant form the Home screen</string>
    <string name="help_data_2">2. Press one of the sensor icons</string>
    <string name="help_watering">How to configure watering</string>
    <string name="help_watering_1">1. Go to Home>Plant>Garden Settings</string>
    <string name="help_watering_2">2. Toggle Automatic watering</string>
    <string name="help_watering_2_text">Turn on to have your plant watered when moisture level is under specifc value.</string>
    <string name="help_watering_3">3. Toggle Scheduled watering</string>
    <string name="help_watering_3_text">Turn on to have your plant watered every da at a specific time.</string>
    <string name="help_link"><a href="https://www.dropbox.com/s/kj5byuicylptn7v/Botanico%20-%20korisni%C4%8Dka%20dokumentacija.docx?dl=0">Learn more</a></string>

</resources>
